--- a/hrc/test/valid/shell-posix-base.sh.html
+++ b/hrc/test/valid/shell-posix-base.sh.html
@@ -101,7 +101,7 @@
  100: <span class='shell-posix-Comment def-Comment def-Syntax'># 2.7.2 Redirecting Output</span>
  101: foo <span class='shell-posix-RedirectSymbol shell-posix-Operator def-Operator def-Symbol'>></span> bla
  102: foo<span class='shell-posix-RedirectDescriptor def-Prefix'> 2</span><span class='shell-posix-RedirectSymbol shell-posix-Operator def-Operator def-Symbol'>></span>bla
- 103: foo<span class='shell-posix-RedirectDescriptor def-Prefix'> 2</span><span class='shell-posix-RedirectSymbol shell-posix-Operator def-Operator def-Symbol'>></span><span class='shell-posix-Operator def-Operator def-Symbol'>|</span>bla
+ 103: foo<span class='shell-posix-RedirectDescriptor def-Prefix'> 2</span><span class='shell-posix-RedirectSymbol shell-posix-Operator def-Operator def-Symbol'>>|</span>bla
  104: 
  105: <span class='shell-posix-Comment def-Comment def-Syntax'># 2.7.3 Appending Redirected Output</span>
  106: foo <span class='shell-posix-RedirectSymbol shell-posix-Operator def-Operator def-Symbol'>>></span> bla
