Add bash: 6.1 Invoking Bash

--- a/hrc/test/valid/shell-bash.bash.html
+++ b/hrc/test/valid/shell-bash.bash.html
@@ -354,4 +354,8 @@
 353: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>export</span> <span class='shell-bash-VariableSpecial shell-posix-VariableSpecial def-Constant def-Keyword'>CDPATH</span> <span class='shell-bash-VariableSpecial shell-posix-VariableSpecial def-Constant def-Keyword'>CDPATH</span><span class='shell-bash-Symbol shell-posix-Symbol def-Symbol'>=</span><span class='shell-bash-Number shell-posix-Number def-Number'>123</span>
 354: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>unset</span> <span class='shell-bash-VariableSpecial shell-posix-VariableSpecial def-Constant def-Keyword'>CDPATH</span>
 355: 
-356: 
+356: <span class='shell-posix-Comment def-Comment def-Syntax'># 6.1 Invoking Bash</span>
+357: 
+358: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>bash</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>bash</span> -c fff
+359: 
+360: 
