Add more commands for the previous commit

--- a/hrc/test/valid/shell-bash.bash.html
+++ b/hrc/test/valid/shell-bash.bash.html
@@ -399,5 +399,7 @@
 398: <span class='shell-posix-Comment def-Comment def-Syntax'># 6.8.1 Directory Stack Builtins</span>
 399: 
 400: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>dirs</span> -c -l +N<span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>dirs</span>
-401: 
-402: 
+401: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>popd</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>popd</span> -n
+402: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>pushd</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>pushd</span> -n dir
+403: 
+404: 
