Add bash: 8.7 Programmable Completion Builtins

--- a/hrc/test/valid/shell-bash.bash.html
+++ b/hrc/test/valid/shell-bash.bash.html
@@ -412,4 +412,10 @@
 411: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>disown</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>disown</span> -a id <span class='shell-posix-Variable def-Var'>$</span><span class='shell-posix-Variable def-Var'>ID</span>
 412: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>suspend</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>suspend </span>-f<span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>suspend </span>-f <span class='shell-posix-Error def-Error'>e</span><span class='shell-posix-Error def-Error'>r</span><span class='shell-posix-Error def-Error'>r</span><span class='shell-posix-Error def-Error'>o</span><span class='shell-posix-Error def-Error'>r</span> <span class='shell-posix-Error def-Error'>h</span><span class='shell-posix-Error def-Error'>e</span><span class='shell-posix-Error def-Error'>r</span><span class='shell-posix-Error def-Error'>e</span>
 413: 
-414: 
+414: <span class='shell-posix-Comment def-Comment def-Syntax'># 8.7 Programmable Completion Builtins</span>
+415: 
+416: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>compgen</span> -o word
+417: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>complete</span> -a name name
+418: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>compopt</span> -o opt name
+419: 
+420: 
