Add bash: 9.2 Bash History Builtins

--- a/hrc/test/valid/shell-bash.bash.html
+++ b/hrc/test/valid/shell-bash.bash.html
@@ -418,4 +418,8 @@
 417: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>complete</span> -a name name
 418: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>compopt</span> -o opt name
 419: 
-420: 
+420: <span class='shell-posix-Comment def-Comment def-Syntax'># 9.2 Bash History Builtins</span>
+421: 
+422: <span class='shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>fc</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>fc</span> -e name
+423: <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>history</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>history</span> <span class='shell-posix-Number def-Number'>1</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-bash-CommandBuiltin shell-posix-CommandBuiltin def-KeywordStrong def-Keyword'>history</span> -c
+424: 
