--- a/hrc/test/valid/shell-posix-bashism.sh.html
+++ b/hrc/test/valid/shell-posix-bashism.sh.html
@@ -2,7 +2,7 @@
 1: 
 2: <span class='shell-posix-Comment def-Comment def-Syntax'># Functions</span>
 3: 
-4: function bla(<span class='shell-posix-Error def-Error'>)</span> <span class='shell-posix-CommandReserved def-Keyword'>{</span>
-5: <span class='shell-posix-CommandReserved def-Keyword'>}</span>
+4: function bla(<span class='shell-posix-Error def-Error'>)</span> <span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>{</span>
+5: <span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>}</span>
 6: 
 7: 
