--- a/hrc/test/valid/shell-posix-other.sh.html
+++ b/hrc/test/valid/shell-posix-other.sh.html
@@ -133,3 +133,12 @@
 132: 
 133: <span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>}</span>
 134: 
+135: <span class='shell-posix-CommandReserved def-Keyword'>case</span> x <span class='shell-posix-CommandReserved def-Keyword'>in</span><span class='shell-posix-String def-String'> </span><span class='shell-posix-Comment def-Comment def-Syntax'># comment here</span><span class='shell-posix-String def-String'></span>
+136: <span class='shell-posix-Comment def-Comment def-Syntax'>#comment here</span><span class='shell-posix-String def-String'></span>
+137: <span class='shell-posix-String def-String'>    blalba</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>)</span>
+138:       <span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>echo</span> foo
+139:       <span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;;</span><span class='shell-posix-String def-String'> </span><span class='shell-posix-Comment def-Comment def-Syntax'># comment here</span><span class='shell-posix-String def-String'></span>
+140: <span class='shell-posix-CommandReserved def-Keyword'>esac</span>
+141: 
+142: 
+143: 
