--- a/hrc/test/valid/shell-posix-github.sh.html
+++ b/hrc/test/valid/shell-posix-github.sh.html
@@ -1,9 +1,15 @@
-﻿0: <span class='def-Comment def-Syntax'>#!</span><span class='def-VarStrong def-Var'>/bin/sh</span>
-1: 
-2: <span class='shell-posix-Comment def-Comment def-Syntax'># </span><span class='def-URL def-URI'>https://github.com/chpock/ck.colorer-schemes/issues/1</span>
-3: 
-4: <span class='shell-posix-CommandReserved def-Keyword'>for</span> <span class='shell-posix-Variable def-Var'>i</span> <span class='shell-posix-CommandReserved def-Keyword'>in</span> <span class='shell-posix-Symbol def-Symbol'>`</span><span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>ls</span><span class='shell-posix-Insertion def-Insertion'> ./*</span><span class='shell-posix-RedirectDescriptor def-Prefix'> 2</span><span class='shell-posix-RedirectSymbol def-InterfaceKeyword def-Keyword'>></span><span class='shell-posix-Insertion def-Insertion'>/dev/null</span><span class='shell-posix-Symbol def-Symbol'>`</span>
-5: <span class='shell-posix-CommandReserved def-Keyword'>do</span>
-6:     <span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>echo</span> <span class='shell-posix-StringEdge def-StringEdge def-String'>"</span><span class='shell-posix-VariableStrong def-VarStrong def-Var'>$</span><span class='shell-posix-Variable def-Var'>i</span><span class='shell-posix-StringEdge def-StringEdge def-String'>"</span>
-7: <span class='shell-posix-CommandReserved def-Keyword'>done</span>
-8: 
+﻿ 0: <span class='def-Comment def-Syntax'>#!</span><span class='def-VarStrong def-Var'>/bin/sh</span>
+ 1: 
+ 2: <span class='shell-posix-Comment def-Comment def-Syntax'># </span><span class='def-URL def-URI'>https://github.com/chpock/ck.colorer-schemes/issues/1</span>
+ 3: 
+ 4: <span class='shell-posix-CommandReserved def-Keyword'>for</span> <span class='shell-posix-Variable def-Var'>i</span> <span class='shell-posix-CommandReserved def-Keyword'>in</span> <span class='shell-posix-Symbol def-Symbol'>`</span><span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>ls</span><span class='shell-posix-Insertion def-Insertion'> ./*</span><span class='shell-posix-RedirectDescriptor def-Prefix'> 2</span><span class='shell-posix-RedirectSymbol def-InterfaceKeyword def-Keyword'>></span><span class='shell-posix-Insertion def-Insertion'>/dev/null</span><span class='shell-posix-Symbol def-Symbol'>`</span>
+ 5: <span class='shell-posix-CommandReserved def-Keyword'>do</span>
+ 6:     <span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>echo</span> <span class='shell-posix-StringEdge def-StringEdge def-String'>"</span><span class='shell-posix-VariableStrong def-VarStrong def-Var'>$</span><span class='shell-posix-Variable def-Var'>i</span><span class='shell-posix-StringEdge def-StringEdge def-String'>"</span>
+ 7: <span class='shell-posix-CommandReserved def-Keyword'>done</span>
+ 8: 
+ 9: <span class='shell-posix-Comment def-Comment def-Syntax'># </span><span class='def-URL def-URI'>https://github.com/chpock/ck.colorer-schemes/issues/5</span>
+10: 
+11: <span class='shell-posix-CommandReserved def-Keyword'>for</span> <span class='shell-posix-Variable def-Var'>i</span> <span class='shell-posix-CommandReserved def-Keyword'>in</span> ./*
+12: <span class='shell-posix-CommandReserved def-Keyword'>do</span>
+13:     <span class='shell-posix-Variable def-Var'>result</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-Symbol def-Symbol'>`</span><span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>touch</span><span class='shell-posix-Insertion def-Insertion'> </span><span class='shell-posix-VariableStrong def-VarStrong def-Var'>${</span><span class='shell-posix-Variable def-Var'>i</span><span class='shell-posix-VariableStrong def-VarStrong def-Var'>}</span><span class='shell-posix-Symbol def-Symbol'>`</span>
+14: <span class='shell-posix-CommandReserved def-Keyword'>done</span>
