Fix variable assignments with line continuations

--- a/hrc/test/valid/shell-bash_regressions-posix-spec.bash.html
+++ b/hrc/test/valid/shell-bash_regressions-posix-spec.bash.html
@@ -145,5 +145,10 @@
 144:       <span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;;</span><span class='shell-posix-String def-String'> </span><span class='shell-posix-Comment def-Comment def-Syntax'># comment here</span><span class='shell-posix-String def-String'></span>
 145: <span class='shell-posix-CommandReserved def-Keyword'>esac</span>
 146: 
-147: 
-148: 
+147: <span class='shell-posix-Variable def-Var'>TEST</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-String def-String'>FOR</span> <span class='shell-posix-Variable def-Var'>VARIABLE</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-String def-String'>ASSIGNMENT</span> \
+148:     <span class='shell-posix-Variable def-Var'>AND</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-String def-String'>LINE</span> <span class='shell-posix-Variable def-Var'>CONTINUATION</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-String def-String'>TRUE</span> \
+149:     <span class='shell-posix-Variable def-Var'>ONE</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-String def-String'>MORE</span> <span class='shell-posix-Variable def-Var'>LINE</span><span class='shell-posix-Symbol def-Symbol'>=</span><span class='shell-posix-StringEdge def-StringEdge def-String'>"</span><span class='shell-posix-String def-String'>TRUE</span><span class='shell-posix-StringEdge def-StringEdge def-String'>"</span> <span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>echo</span> <span class='shell-posix-Number def-Number'>1</span> <span class='shell-posix-Number def-Number'>2</span> <span class='shell-posix-Number def-Number'>3</span>
+150: 
+151: 
+152: 
+153: 
