Fix unhighlighted areas after updating colorer from 1.3.3 to 1.4.0

--- a/hrc/test/valid/shell-bash_regressions-posix-other.bash.html
+++ b/hrc/test/valid/shell-bash_regressions-posix-other.bash.html
@@ -249,7 +249,7 @@
 248:    <span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>command</span>
 249: <span class='shell-posix-CommandReserved def-Keyword'>done</span>
 250: 
-251: <span class='shell-posix-CommandReserved def-Keyword'>for</span> <span class='shell-posix-Variable def-Var'>VAR</span> <span class='shell-posix-Error def-Error'>error</span> <span class='shell-posix-Error def-Error'>here</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-posix-CommandReserved def-Keyword'>do</span>
+251: <span class='shell-posix-CommandReserved def-Keyword'>for</span> <span class='shell-posix-Variable def-Var'>VAR</span> <span class='shell-posix-Error def-Error'>error here</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-posix-CommandReserved def-Keyword'>do</span>
 252: <span class='shell-posix-CommandReserved def-Keyword'>done</span>
 253: 
 254: <span class='shell-posix-CommandReserved def-Keyword'>for</span> <span class='shell-posix-Variable def-Var'>VAR</span><span class='shell-posix-SymbolStrong def-SymbolStrong def-Symbol'>;</span> <span class='shell-posix-CommandReserved def-Keyword'>do</span>
