Update sh/bash tests

--- a/hrc/test/valid/shell-bash-github.sh.html
+++ b/hrc/test/valid/shell-bash-github.sh.html
@@ -15,3 +15,8 @@
 14: <span class='shell-posix-CommandReserved def-Keyword'>done</span>
 15: 
 16: <span class='shell-posix-Variable def-Var'>ids</span><span class='shell-bash-Symbol shell-posix-Symbol def-Symbol'>+=</span><span class='shell-bash-Symbol shell-posix-Symbol def-Symbol'>(</span><span class='shell-bash-String shell-posix-String def-String'> </span><span class='shell-posix-VariableStrong def-VarStrong def-Var'>$</span><span class='shell-posix-VariableSpecial def-Constant def-Keyword'>!</span><span class='shell-bash-String shell-posix-String def-String'> </span><span class='shell-bash-Symbol shell-posix-Symbol def-Symbol'>)</span>
+17: 
+18: <span class='shell-posix-Comment def-Comment def-Syntax'># </span><span class='def-URL def-URI'>https://github.com/colorer/Colorer-schemes/issues/172</span>
+19: 
+20: <span class='shell-posix-CommandBuiltin def-FunctionKeyword def-Keyword'>echo</span> <span class='shell-posix-StringEdge def-StringEdge def-String'>"</span><span class='shell-bash-VariableStrong shell-posix-VariableStrong def-VarStrong def-Var'>${</span><span class='shell-bash-VariablePrefix shell-posix-VariablePrefix def-Prefix'>!</span><span class='shell-posix-Variable def-Var'>var</span><span class='shell-bash-VariablePrefix shell-posix-VariablePrefix def-Prefix'>@</span><span class='shell-bash-VariablePrefix shell-posix-VariablePrefix def-Prefix'>Q</span><span class='shell-bash-VariableStrong shell-posix-VariableStrong def-VarStrong def-Var'>}</span><span class='shell-posix-StringEdge def-StringEdge def-String'>"</span> more text here
+21: 
