--- a/hrc/test/valid/yaml-d-yaml-spec/spec-09-02-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-09-02-0.yaml.html
@@ -4,7 +4,7 @@
  3: <span class='yaml-String def-String'> trimmed </span>
  4: <span class='yaml-String def-String'></span>
  5: <span class='yaml-String def-String'> specific </span>
- 6: <span class='yaml-String def-String'> escaped    \  </span>
+ 6: <span class='yaml-String def-String'> escaped    \</span><span class='yaml-Error def-Error'>  </span><span class='yaml-String def-String'></span>
  7: <span class='yaml-String def-String'> none</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  8: 
  9: <span class='yaml-Comment def-Comment def-Syntax'># null</span>
