--- a/hrc/test/valid/yaml-d-yaml-spec/spec-09-04-0.yaml.html
+++ b/hrc/test/valid/yaml-d-yaml-spec/spec-09-04-0.yaml.html
@@ -2,7 +2,7 @@
  1: 
  2:  <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>first</span>
  3: <span class='yaml-String def-String'>     inner 1    </span>
- 4: <span class='yaml-String def-String'> </span><span class='yaml-StringContent def-StringContent def-String'>\ </span><span class='yaml-String def-String'>inner 2 \</span>
+ 4: <span class='yaml-String def-String'> </span><span class='yaml-StringContent def-StringContent def-String'>\ </span><span class='yaml-String def-String'>inner 2 </span><span class='yaml-StringContent def-StringContent def-String'>\</span><span class='yaml-String def-String'></span>
  5: <span class='yaml-String def-String'> last</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  6: 
  7: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
