--- a/hrc/test/valid/yaml-yaml-test-suite/NP9H-0.yaml.html
+++ b/hrc/test/valid/yaml-yaml-test-suite/NP9H-0.yaml.html
@@ -3,7 +3,7 @@
  2: <span class='yaml-StringEdge def-StringEdge def-String'>"</span><span class='yaml-String def-String'>folded␣</span>
  3: <span class='yaml-String def-String'>to a space,»</span>
  4: <span class='yaml-String def-String'>␣</span>
- 5: <span class='yaml-String def-String'>to a line feed, or »\</span>
+ 5: <span class='yaml-String def-String'>to a line feed, or »</span><span class='yaml-StringContent def-StringContent def-String'>\</span><span class='yaml-String def-String'></span>
  6: <span class='yaml-String def-String'> </span><span class='yaml-StringContent def-StringContent def-String'>\ </span><span class='yaml-String def-String'>»non-content</span><span class='yaml-StringEdge def-StringEdge def-String'>"</span>
  7: 
  8: <span class='yaml-Comment def-Comment def-Syntax'># +STR</span>
